--- a/portfolio.html
+++ b/portfolio.html
@@ -282,6 +282,18 @@
                 </li>
             </ul>
         </div>
+        <div>
+            <form>
+                <p>ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+                <input class="form-input" type="email" name="user_email" placeholder="E-mail">
+                <span class="form-control">
+                    <button class="button" type="submit">Подписаться</button>
+                    <svg class="send-icon" width="24" height="24">
+                        <use href="./images/sprite.svg#send-icon"></use>
+                    </svg>
+                </span>
+            </form>
+        </div>
     </div>
 </footer>
 
