--- a/index.html
+++ b/index.html
@@ -401,7 +401,8 @@
         <div>
             <form>
                 <p>ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
-                <input class="form-input" type="email" name="user_email" placeholder="E-mail">
+                <label for="user_email"></label>
+                <input id="user_email" class="form-input" type="email" name="user_email" placeholder="E-mail">
                 <span class="form-control">
                     <button class="button" type="submit">Подписаться</button>
                     <svg class="send-icon" width="24" height="24">
@@ -454,8 +455,8 @@
             <div class="form-control-checkbox">
                 <input type="checkbox" name="accept-policy" required id="accept-policy"
                        class="contact-form-checkbox visually-hidden">
-                <label class="contact-form-checkbox-label" for="accept-policy">Соглашаюсь с рассылкой и принимаю<a
-                        href="">Условия договора</a></label>
+                <label class="contact-form-checkbox-label" for="accept-policy">Соглашаюсь с рассылкой и принимаю&nbsp;<a
+                        href=""> Условия договора</a></label>
             </div>
             <button type="submit" class="form-button button">Отправить</button>
         </form>
