--- a/portfolio.html
+++ b/portfolio.html
@@ -285,7 +285,8 @@
         <div>
             <form>
                 <p>ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
-                <input class="form-input" type="email" name="user_email" placeholder="E-mail">
+                <label for="user_email"></label>
+                <input id="user_email" class="form-input" type="email" name="user_email" placeholder="E-mail">
                 <span class="form-control">
                     <button class="button" type="submit">Подписаться</button>
                     <svg class="send-icon" width="24" height="24">
