--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         </div>
         <div>
             <form>
-                <p>ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+                <p>Подпишитесь на рассылку</p>
                 <label for="user_email"></label>
                 <input id="user_email" class="form-input" type="email" name="user_email" placeholder="E-mail">
                 <span class="form-control">
@@ -432,7 +432,7 @@
                 <label for="phoneNumber">Телефон</label>
                 <div class="form-field-wrapper">
                     <input id="phoneNumber" type="tel" name="phoneNumber">
-                    <svg width="12" height="12">
+                    <svg width="13" height="13">
                         <use href="./images/sprite.svg#number-icon"></use>
                     </svg>
                 </div>
@@ -441,7 +441,7 @@
                 <label for="email">Почта</label>
                 <div class="form-field-wrapper">
                     <input id="email" type="email" name="email" class="contact-form-input">
-                    <svg width="12" height="12" class="contact-form-icon">
+                    <svg width="15" height="12" class="contact-form-icon">
                         <use href="./images/sprite.svg#email-icon"></use>
                     </svg>
                 </div>
