--- a/portfolio.html
+++ b/portfolio.html
@@ -284,7 +284,7 @@
         </div>
         <div>
             <form>
-                <p>ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+                <p>Подпишитесь на рассылку</p>
                 <label for="user_email"></label>
                 <input id="user_email" class="form-input" type="email" name="user_email" placeholder="E-mail">
                 <span class="form-control">
